--- a/app/view/home.html
+++ b/app/view/home.html
@@ -5,7 +5,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-6">
-                <h3 class="mb-0">Visão geral do negócio</h3>
+                <h3 class="mb-0 text-danger">Bem-Vindo ao Bit-Lab</h3>
             </div>
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-end">
