--- a/app/view/left_menu.html
+++ b/app/view/left_menu.html
@@ -8,12 +8,8 @@
 
     <div class="sidebar-wrapper">
         <nav class="mt-2">
-            <ul class="nav sidebar-menu flex-column"
-                data-lte-toggle="treeview"
-                role="navigation"
-                aria-label="Main navigation"
-                data-accordion="false"
-                id="navigation">
+            <ul class="nav sidebar-menu flex-column" data-lte-toggle="treeview" role="navigation"
+                aria-label="Main navigation" data-accordion="false" id="navigation">
 
                 <!-- CADASTROS -->
                 <li class="nav-item">
@@ -84,16 +80,9 @@
 
                     <ul class="nav nav-treeview">
                         <li class="nav-item">
-                            <a href="/venda/nova" class="nav-link">
+                            <a href="/venda/lista" class="nav-link">
                                 <i class="bi bi-plus-circle"></i>
                                 <p>Nova Venda</p>
-                            </a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a href="/venda/lista" class="nav-link">
-                                <i class="bi bi-receipt"></i>
-                                <p>Lista de Vendas</p>
                             </a>
                         </li>
                     </ul>
