--- a/app/view/listaproduto.html
+++ b/app/view/listaproduto.html
@@ -46,7 +46,7 @@
 
 {% block script %}
 {% include "script.html" %}
-<script defer type="module" src="/js/listaproduto.js"></script>
+<script defer type="module" src="/js/listproduto.js"></script>
 <script>
 // Função para imprimir a tabela
 function imprimirTabela() {
